--- a/languages/usm.pot
+++ b/languages/usm.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-01-09T13:39:58+00:00\n"
+"POT-Creation-Date: 2024-01-09T13:42:34+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.9.0\n"
 "X-Domain: usm\n"
@@ -304,6 +304,326 @@ msgstr ""
 #: includes/post-types/class-player.php:253
 msgctxt "Admin column label"
 msgid "Table sorted by role."
+msgstr ""
+
+#. translators: General name for the post type, usually plural. Default is ‘Posts’ / ‘Pages’.
+#. translators: Label for the menu name. Default is the same as name.
+#: includes/post-types/class-sponsor.php:61
+#: includes/post-types/class-sponsor.php:95
+msgctxt "Post type label"
+msgid "Sponsors"
+msgstr ""
+
+#. translators: Name for one object of this post type. Default is ‘Post’ / ‘Page’.
+#: includes/post-types/class-sponsor.php:63
+msgctxt "Post type label"
+msgid "Sponsor"
+msgstr ""
+
+#. translators: Label for adding a new item. Default is ‘Add New Post’ / ‘Add New Page’.
+#. translators: Label for adding a new singular item. Default is ‘Add New Post’ / ‘Add New Page’.
+#: includes/post-types/class-sponsor.php:65
+#: includes/post-types/class-sponsor.php:67
+msgctxt "Post type label"
+msgid "Add a sponsor"
+msgstr ""
+
+#. translators: Label for editing a singular item. Default is ‘Edit Post’ / ‘Edit Page’.
+#: includes/post-types/class-sponsor.php:69
+msgctxt "Post type label"
+msgid "Edit sponsor"
+msgstr ""
+
+#. translators: Label for the new item page title. Default is ‘New Post’ / ‘New Page’.
+#: includes/post-types/class-sponsor.php:71
+msgctxt "Post type label"
+msgid "New sponsor"
+msgstr ""
+
+#. translators: Label for viewing a singular item. Default is ‘View Post’ / ‘View Page’.
+#: includes/post-types/class-sponsor.php:73
+msgctxt "Post type label"
+msgid "View sponsor"
+msgstr ""
+
+#. translators: Label for viewing post type archives. Default is ‘View Posts’ / ‘View Pages’.
+#: includes/post-types/class-sponsor.php:75
+msgctxt "Post type label"
+msgid "View sponsors"
+msgstr ""
+
+#. translators: Label for searching plural items. Default is ‘Search Posts’ / ‘Search Pages’.
+#: includes/post-types/class-sponsor.php:77
+msgctxt "Post type label"
+msgid "Search sponsors"
+msgstr ""
+
+#. translators: Label used when no items are found. Default is ‘No posts found’ / ‘No pages found’.
+#: includes/post-types/class-sponsor.php:79
+msgctxt "Post type label"
+msgid "No sponsor found."
+msgstr ""
+
+#. translators: Label used when no items are in the Trash. Default is ‘No posts found in Trash’ / ‘No pages found in Trash’.
+#: includes/post-types/class-sponsor.php:81
+msgctxt "Post type label"
+msgid "No sponsor found in trash."
+msgstr ""
+
+#. translators: Label used to prefix parents of hierarchical items. Not used on non-hierarchical post types. Default is ‘Parent Page:’.
+#: includes/post-types/class-sponsor.php:83
+msgctxt "Post type label"
+msgid "Parent sponsor:"
+msgstr ""
+
+#. translators: Label to signify all items in a submenu link. Default is ‘All Posts’ / ‘All Pages’.
+#: includes/post-types/class-sponsor.php:85
+msgctxt "Post type label"
+msgid "All sponsors"
+msgstr ""
+
+#. translators: Label for archives in nav menus. Default is ‘Post Archives’ / ‘Page Archives’.
+#: includes/post-types/class-sponsor.php:87
+msgctxt "Post type label"
+msgid "Sponsor archives"
+msgstr ""
+
+#. translators: Label for the attributes meta box. Default is ‘Post Attributes’ / ‘Page Attributes’.
+#: includes/post-types/class-sponsor.php:89
+msgctxt "Post type label"
+msgid "Sponsor attributes"
+msgstr ""
+
+#. translators: Label for the media frame button. Default is ‘Insert into post’ / ‘Insert into page’.
+#: includes/post-types/class-sponsor.php:91
+msgctxt "Post type label"
+msgid "Add to sponsor"
+msgstr ""
+
+#. translators: Label for the media frame filter. Default is ‘Uploaded to this post’ / ‘Uploaded to this page’.
+#: includes/post-types/class-sponsor.php:93
+msgctxt "Post type label"
+msgid "Uploaded to this sponsor"
+msgstr ""
+
+#. translators: Label for the table views hidden heading. Default is ‘Filter posts list’ / ‘Filter pages list’.
+#: includes/post-types/class-sponsor.php:97
+msgctxt "Post type label"
+msgid "Filter the list of sponsors"
+msgstr ""
+
+#. translators: Label for the date filter in list tables. Default is ‘Filter by date’.
+#: includes/post-types/class-sponsor.php:99
+msgctxt "Post type label"
+msgid "Filter sponsors by date"
+msgstr ""
+
+#. translators: Label for the table pagination hidden heading. Default is ‘Posts list navigation’ / ‘Pages list navigation’.
+#: includes/post-types/class-sponsor.php:101
+msgctxt "Post type label"
+msgid "Navigation in the list of sponsors"
+msgstr ""
+
+#. translators: Label for the table hidden heading. Default is ‘Posts list’ / ‘Pages list’.
+#: includes/post-types/class-sponsor.php:103
+msgctxt "Post type label"
+msgid "List of sponsors"
+msgstr ""
+
+#. translators: Label used when an item is published. Default is ‘Post published.’ / ‘Page published.’
+#: includes/post-types/class-sponsor.php:105
+msgctxt "Post type label"
+msgid "Sponsor published."
+msgstr ""
+
+#. translators: Label used when an item is published with private visibility. Default is ‘Post published privately.’ / ‘Page published privately.’
+#: includes/post-types/class-sponsor.php:107
+msgctxt "Post type label"
+msgid "Sponsor published privately."
+msgstr ""
+
+#. translators: Label used when an item is switched to a draft. Default is ‘Post reverted to draft.’ / ‘Page reverted to draft.’
+#: includes/post-types/class-sponsor.php:109
+msgctxt "Post type label"
+msgid "Sponsor reverted to draft."
+msgstr ""
+
+#. translators: Label used when an item is moved to Trash. Default is ‘Post trashed.’ / ‘Page trashed.’
+#: includes/post-types/class-sponsor.php:111
+msgctxt "Post type label"
+msgid "Sponsor moved to trash."
+msgstr ""
+
+#. translators: Label used when an item is scheduled for publishing. Default is ‘Post scheduled.’ / ‘Page scheduled.’
+#: includes/post-types/class-sponsor.php:113
+msgctxt "Post type label"
+msgid "Sponsor scheduled."
+msgstr ""
+
+#. translators: Label used when an item is updated. Default is ‘Post updated.’ / ‘Page updated.’
+#: includes/post-types/class-sponsor.php:115
+msgctxt "Post type label"
+msgid "Sponsor updated."
+msgstr ""
+
+#. translators: Title for a navigation link block variation. Default is ‘Post Link’ / ‘Page Link’.
+#: includes/post-types/class-sponsor.php:117
+msgctxt "Post type label"
+msgid "Sponsor link"
+msgstr ""
+
+#. translators: Description for a navigation link block variation. Default is ‘A link to a post.’ / ‘A link to a page.’
+#: includes/post-types/class-sponsor.php:119
+msgctxt "Post type label"
+msgid "A link to a sponsor."
+msgstr ""
+
+#: includes/post-types/class-sponsor.php:167
+msgctxt "Admin column title"
+msgid "Engagement Level"
+msgstr ""
+
+#: includes/post-types/class-sponsor.php:168
+msgctxt "Admin column label"
+msgid "Table sorted by engagement level."
+msgstr ""
+
+#. translators: General name for the taxonomy, usually plural. The same as and overridden by $tax->label. Default 'Tags'/'Categories'.
+#: includes/taxonomies/class-engagement-level.php:33
+msgctxt "Taxonomy label"
+msgid "Engagement Levels"
+msgstr ""
+
+#. translators: Singular name for the taxonomy. Default 'Tag'/'Category'.
+#: includes/taxonomies/class-engagement-level.php:35
+msgctxt "Taxonomy label"
+msgid "Engagement Level"
+msgstr ""
+
+#. translators: Default ‘Search Tags'/'Search Categories’.
+#: includes/taxonomies/class-engagement-level.php:37
+msgctxt "Taxonomy label"
+msgid "Search Engagement Levels"
+msgstr ""
+
+#. translators: Default ‘Popular Tags'/'Popular Categories’.
+#: includes/taxonomies/class-engagement-level.php:39
+msgctxt "Taxonomy label"
+msgid "Popular Engagement Levels"
+msgstr ""
+
+#. translators: Default ‘All Tags'/'All Categories’.
+#: includes/taxonomies/class-engagement-level.php:41
+msgctxt "Taxonomy label"
+msgid "All Engagement Levels"
+msgstr ""
+
+#. translators: This label is only used for hierarchical taxonomies. Default ‘Parent Category’.
+#: includes/taxonomies/class-engagement-level.php:43
+msgctxt "Taxonomy label"
+msgid "Parent Engagement Level"
+msgstr ""
+
+#. translators: The same as parent_item, but with colon : in the end.
+#: includes/taxonomies/class-engagement-level.php:45
+msgctxt "Taxonomy label"
+msgid "Parent Engagement Level:"
+msgstr ""
+
+#. translators: Default ‘Edit Tag'/'Edit Category’.
+#: includes/taxonomies/class-engagement-level.php:47
+msgctxt "Taxonomy label"
+msgid "Edit Engagement Level"
+msgstr ""
+
+#. translators: Default ‘View Tag'/'View Category’.
+#: includes/taxonomies/class-engagement-level.php:49
+msgctxt "Taxonomy label"
+msgid "View Engagement Level"
+msgstr ""
+
+#. translators: Default ‘Update Tag'/'Update Category’.
+#: includes/taxonomies/class-engagement-level.php:51
+msgctxt "Taxonomy label"
+msgid "Update Engagement Level"
+msgstr ""
+
+#. translators: Default ‘Add New Tag'/'Add New Category’.
+#: includes/taxonomies/class-engagement-level.php:53
+msgctxt "Taxonomy label"
+msgid "Add New Engagement Level"
+msgstr ""
+
+#. translators: Default ‘New Tag Name'/'New Category Name’.
+#: includes/taxonomies/class-engagement-level.php:55
+msgctxt "Taxonomy label"
+msgid "New Engagement Level Name"
+msgstr ""
+
+#. translators: This label is only used for non-hierarchical taxonomies. Default ‘Separate tags with commas’, used in the meta box.
+#: includes/taxonomies/class-engagement-level.php:57
+msgctxt "Taxonomy label"
+msgid "Separate engagement levels with commas"
+msgstr ""
+
+#. translators: This label is only used for non-hierarchical taxonomies. Default ‘Add or remove tags’, used in the meta box when JavaScript is disabled.
+#: includes/taxonomies/class-engagement-level.php:59
+msgctxt "Taxonomy label"
+msgid "Add or remove engagement levels"
+msgstr ""
+
+#. translators: This label is only used on non-hierarchical taxonomies. Default ‘Choose from the most used tags’, used in the meta box.
+#: includes/taxonomies/class-engagement-level.php:61
+msgctxt "Taxonomy label"
+msgid "Choose from the most used engagement levels"
+msgstr ""
+
+#. translators: Default ‘No tags found'/'No categories found’, used in the meta box and taxonomy list table.
+#: includes/taxonomies/class-engagement-level.php:63
+msgctxt "Taxonomy label"
+msgid "No engagement levels found."
+msgstr ""
+
+#. translators: Default ‘No tags'/'No categories’, used in the posts and media list tables.
+#: includes/taxonomies/class-engagement-level.php:65
+msgctxt "Taxonomy label"
+msgid "No engagement levels"
+msgstr ""
+
+#. translators: This label is only used for hierarchical taxonomies. Default ‘Filter by category’, used in the posts list table.
+#: includes/taxonomies/class-engagement-level.php:67
+msgctxt "Taxonomy label"
+msgid "Filter by engagement level"
+msgstr ""
+
+#. translators: Label for the table pagination hidden heading. Default 'Tags list navigation'/'Categories list navigation'.
+#: includes/taxonomies/class-engagement-level.php:69
+msgctxt "Taxonomy label"
+msgid "Engagement Levels list navigation"
+msgstr ""
+
+#. translators: Label for the table hidden heading. Default 'Tags list'/'Categories list'.
+#: includes/taxonomies/class-engagement-level.php:71
+msgctxt "Taxonomy label"
+msgid "Engagement Levels list"
+msgstr ""
+
+#. translators: Label displayed after a term has been updated. Default '&larr; Go to Tags'/'&larr; Go to Categories'
+#: includes/taxonomies/class-engagement-level.php:73
+msgctxt "Taxonomy label"
+msgid "&larr; Go to Engagement Levels"
+msgstr ""
+
+#. translators: Used in the block editor. Title for a navigation link block variation. Default ‘Tag Link'/'Category Link’.
+#: includes/taxonomies/class-engagement-level.php:75
+msgctxt "Taxonomy label"
+msgid "Engagement Level Link"
+msgstr ""
+
+#. translators: Used in the block editor. Description for a navigation link block variation. Default ‘A link to a tag'/'A link to a category’.
+#: includes/taxonomies/class-engagement-level.php:77
+msgctxt "Taxonomy label"
+msgid "A link to an engagement level"
 msgstr ""
 
 #. translators: General name for the taxonomy, usually plural. The same as and overridden by $tax->label. Default 'Tags'/'Categories'.
